Updated Data Management

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -11,5 +11,6 @@
   "newFileLocation": "current",
   "newLinkFormat": "absolute",
   "useMarkdownLinks": true,
-  "attachmentFolderPath": "/"
+  "attachmentFolderPath": "/",
+  "strictLineBreaks": true
 }
