Updated Systems and Networking, added plugins

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -12,5 +12,6 @@
   "newLinkFormat": "absolute",
   "useMarkdownLinks": true,
   "attachmentFolderPath": "/",
-  "strictLineBreaks": true
+  "strictLineBreaks": true,
+  "showInlineTitle": false
 }
