--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,5 +13,6 @@
   "useMarkdownLinks": true,
   "attachmentFolderPath": "/",
   "strictLineBreaks": true,
-  "showInlineTitle": false
+  "showInlineTitle": false,
+  "alwaysUpdateLinks": true
 }
