[Workflow] GitHub pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,12 @@
-site_name: obsidian-mkdocs template
+# mkdocs.yml
+
+site_name: xk ACSAI-Obsidian
+site_description: Notes I've taken during my ACSAI journey.
+site_author: Emanuele "Excale" Scaccia
+
+docs_dir: ''
+repo_url: https://github.com/devExcale/acsai-obsidian
+use_directly_urls: true
 
 theme:
     name: 'material'
