[Workflow] GitHub pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_name: xk ACSAI-Obsidian
 site_description: Notes I've taken during my ACSAI journey.
 site_author: Emanuele "Excale" Scaccia
 
-docs_dir: ''
+docs_dir: ""
 repo_url: https://github.com/devExcale/acsai-obsidian
 use_directly_urls: true
 
@@ -58,8 +58,10 @@ markdown_extensions:
 
 plugins:
   - search
-  - roamlinks 
-
+  - simple:
+      ignore_folders: [ "\.*" ]
+      include_extensions: [ "*" ]
+      semiliterate: [ ]
 
 extra_javascript:
   - javascripts/mathjax.js
