--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -1,25 +1,47 @@
 name: Publish to GitHub pages
 
+permissions:
+  contents: write
+
 on:
   push:
     branches:
       - master
 
-permissions:
-  contents: write
+
+jobs:
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+    
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+          
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: ${{ github.ref }}
+          path: .cache
+
+      - name: Install MkDocs Material
+        run: pip install mkdocs-material
+        
+      - name: Install MkDocs Simple Plugin
+        run: pip install mkdocs-simple-plugin
+          
+      - name: Build docs
+        uses: athackst/mkdocs-simple-plugin
+        with:
+          publish_branch: gh-pages
+          config: "mkdocs.yml"
+          push: 1
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.x
-      - uses: actions/cache@v2
-        with:
-          key: ${{ github.ref }}
-          path: .cache
-      - run: pip install mkdocs-material
-      - run: pip install mkdocs-roamlinks-plugin
-      # - run: pip install mkdocs-mermaid2-plugin
-      - run: mkdocs gh-deploy --force
