--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -8,22 +8,23 @@ on:
     branches:
       - master
 
-
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    
+
       - name: Checkout
         uses: actions/checkout@v3
-          
+
       - name: Cache
         uses: actions/cache@v2
         with:
           key: ${{ github.ref }}
           path: .cache
 
-      # Python and mkdocs-material plugin are already downloaded
+      - name: Install dependencies
+        run: pip install mkdocs-webcontext mkdocs-ezlinks-plugin
+
       - name: Build docs
         uses: athackst/mkdocs-simple-plugin@v2.3.0
         with:
