--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,10 @@
 site_name: xk ACSAI-Obsidian
 site_description: Notes I've taken during my ACSAI journey.
 site_author: Emanuele "Excale" Scaccia
+site_url: https://devExcale.github.com/acsai-obsidian/
 
 repo_url: https://github.com/devExcale/acsai-obsidian
+edit_uri: blob/master/
 use_directly_urls: true
 
 theme:
@@ -63,6 +65,12 @@ plugins:
       include_extensions:
        - '*'
       semiliterate:
+  - webcontext:
+      context: acsai-obsidian
+  - ezlinks:
+      warn_ambiguities: false
+      wikilinks: false
+      reference_links: false
 
 extra_javascript:
   - javascripts/mathjax.js
