[Workflow] Reverted to default mkdocs build

--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -15,10 +15,20 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Build docs
-        uses: athackst/mkdocs-simple-plugin@v2.3.0
+        
+      - name: Cache Python
+        uses: actions/cache@v2
         with:
-          publish_branch: gh-pages
-          config: "mkdocs.yml"
-          push: 1
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('.github/mkdocs/requirements.txt') }}
+          
+      - name: Setup Python
+        uses: actions/setup-python@v4 
+        with:
+          python-version: '3.x'
+      
+      - name: Prepare MkDocs build
+        run: bash .github/scripts/prepare_publish.sh
+      
+      - name: Publish MkDocs
+        run: mkdocs gh-deploy
