--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4 
         with:
-          python-version: '3.x'
+          python-version: '3.9'
         
       - name: Cache Python
         uses: actions/cache@v2
