--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set git user
+        run: git config --global user.name 'Workflow'
           
       - name: Setup Python
         uses: actions/setup-python@v4 
