--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -4,9 +4,10 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Fix Notes"]
+    types:
+      - completed
 
 jobs:
   docs:
