[AI ML U1] Agents

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -11,7 +11,7 @@
   "newFileLocation": "current",
   "newLinkFormat": "absolute",
   "useMarkdownLinks": true,
-  "attachmentFolderPath": "/",
+  "attachmentFolderPath": "assets",
   "strictLineBreaks": true,
   "showInlineTitle": false,
   "alwaysUpdateLinks": true
