--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -37,4 +37,4 @@ jobs:
         run: bash .github/scripts/prepare_publish.sh
       
       - name: Publish MkDocs
-        run: mkdocs gh-deploy
+        run: mkdocs gh-deploy -m "[MkDocs] Publishing commit {sha}"
